// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AffixedProgressBar /> > should render 1`] = `
<Component
  className="sc-dkrFOg"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [bottom=true] 1`] = `
<Component
  bottom={true}
  className="sc-dkrFOg"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] blue 1`] = `
<Component
  className="sc-dkrFOg"
  color="blue"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] green 1`] = `
<Component
  className="sc-dkrFOg"
  color="green"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] orange 1`] = `
<Component
  className="sc-dkrFOg"
  color="orange"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] red 1`] = `
<Component
  className="sc-dkrFOg"
  color="red"
  now={68}
/>
`;

exports[`<ProgressBar /> > should render 1`] = `
<styled.progress
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] blue 1`] = `
<styled.progress
  color="blue"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] green 1`] = `
<styled.progress
  color="green"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] orange 1`] = `
<styled.progress
  color="orange"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] red 1`] = `
<styled.progress
  color="red"
  max="100"
  value={32}
/>
`;
